# movie

./: .gitignore  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  README.md  calendar.ics  ci_cd_plan.md  db_unification_plan.md  diag.txt  index.html  pyproject.toml  rec.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  daily-update.yml  development-update.yml  test-on-pr.yml
data/: cache.sqlite
docs/: calendar.ics  diag.txt  index.html
movie_scraper/: __init__.py  calendar_generator.py  database.py  models.py  settings.py  simple_scraper.py
movie_scraper.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
movie_scraper/patches/: WIRE_ENRICHMENT.txt  enrichment.py  migration.py  parse_first_day_new_fix.py
movie_scraper/scraper/: __init__.py
tests/: test_database.py
